hw6_lab10/tests/errors/sem_null_to_nonnullable.kt
// EXPECT: semantic error — assigning null to non-nullable
fun main() {
    var x: Int = null
}
